<resources>
    <!-- string for all -->
    <string name="app_name">First app</string>
    <string name="create">Create</string>
    <string name="back">Back</string>

    <!-- string of MainActivity.java -->
    <string name="hello_world">Hello HUNK2!</string>
    <string name="action_settings">Settings</string>
    <string name="create_path">Create a New Path</string>

    <!-- string of NewRoute.java -->
    <string name="edit_path_name">Enter a path name</string>
    <string name="path_name">Name of Path:</string>

    <string name="path_from">From</string>
    <string name="path_to">To</string>
    <string name="path_arrive">Arrival time</string>

    <string name="title_activity_new_route">NewRoute</string>
</resources>
