<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hunkim2.firstapp.NewRoute">


    <!--
        Todo:
        1: the REQUIRED fields of table
        2: Google Map Search Function
    -->

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <!-- 1st row-->
        <TableRow>
            <TextView
                android:text="@string/path_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_EditPathName"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_EditPathName"
                android:hint="@string/edit_path_name"
                android:layout_weight="1" />
        </TableRow>

        <!-- 2nd row-->
        <TableRow>
            <TextView
                android:text="@string/path_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_EditPathFrom"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_EditPathFrom"
                android:layout_weight="1" />
        </TableRow>

        <!-- 3rd row-->
        <TableRow>
            <TextView
                android:text="@string/path_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_EditPathTo"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_EditPathTo"
                android:layout_weight="1" />
        </TableRow>

        <!-- 4th row-->
        <TableRow>
            <TextView
                android:text="@string/path_arrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_EditPathArrive"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- "createRoute" NOT implemented -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:onClick="createRoute"
                android:layout_column="1" />
        </TableRow>

    </TableLayout>




</LinearLayout>
